Fixed overlapping on main header

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ img {
   top: 0;
   right: 0;
   left: 0;
+  z-index: 1000;
 }
 
 /* Header Left */
